Bug 79639 - 32 page document imports as 1 page document
Summary: 32 page document imports as 1 page document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
3.6.0.4 release
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2014-06-04 15:01 UTC by Florian Reisinger
Modified: 2023-07-03 22:44 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Testkit (2.08 MB, application/x-zip-compressed)
2014-06-04 15:01 UTC, Florian Reisinger
Details
test 32-page document.docx (1.21 MB, application/vnd.openxmlformats-officedocument.wordprocessingml)
2015-06-01 10:27 UTC, Timur
Details
test 32-page document in Word 2010 (741.37 KB, application/pdf)
2015-06-01 10:28 UTC, Timur
Details
test 32-page document in LO 3.3 (414.31 KB, application/pdf)
2015-06-01 10:28 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Florian Reisinger 2014-06-04 15:01:11 UTC
Hi,
Download the attached testkit and open the docx in LibO
There is a PDF showing how it should look like in Word 2010 and the result with LibO master(test doc from bug #61363)

There is a regression compared to LibO 4.1 (Version: 4.1.5.3
Build-ID: 1c1366bba2ba2b554cd2ca4d87c06da81c05d24), but if it is wanted, I can file another bug about that.
(Ok, you might see that I am testing while writing the bug) WORKING with:
LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Also working with:
LibreOffice 3.4.0 
OOO340m1 (Build:11)
Crash with LibreOffice 3.5.0rc3 
Build-ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735
Working with: Version 3.6.0.4 (Build ID: 932b512) [+5 pages and bad layout -> marking as oldest
Worse with Version 4.0.0.3 (Build ID: 7545bee9c2a0782548772a21bc84a9dcc583b89) --> Worse layout...
[OS: Win7 x64]
Comment 1 Florian Reisinger 2014-06-04 15:01:37 UTC
Created attachment 100399 [details]
Testkit
Comment 2 m.a.riosv 2014-06-04 16:57:40 UTC
Hi Florian, 
I can reproduce the issue
Win7x64
With 3.4.6 crash for me.

With versions from 4.1.6 up to
Version: 4.4.0.0.alpha0+ Win-x86@39, master, Time: 2014-06-04_04:27:18
only one/two pages are loaded.
Comment 3 Xisco Faulí 2014-08-12 13:21:13 UTC
bibisected:

There are only 'skip'ped commits left to test.
The first bad commit could be any of: a043626b542eb8314218d7439534dce2fc325304 79ff8e93eb0ddcebca4f814fc6883da8e1485c9f ae627c725e93b01ef68cf242574f40eb9885e3c9 91460ba3ce3a0efa5693f098c1072b058903a31c
We cannot bisect more!

# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# good: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
git bisect good e02439a3d6297a1f5334fa558ddec5ef4212c574
# bad: [4850941efe43ae800be5c76e1102ab80ac2c085d] source-hash-980a6e552502f02f12c15bfb1c9f8e6269499f4b
git bisect bad 4850941efe43ae800be5c76e1102ab80ac2c085d
# skip: [a043626b542eb8314218d7439534dce2fc325304] source-hash-9379a922c07df3cdb7d567cc88dfaaa39ead3681
git bisect skip a043626b542eb8314218d7439534dce2fc325304
# skip: [aba65c3e4c0df07e4909aeefb758cdb688242bf6] source-hash-827524abfb4b577d08276fde40929a9adfb7ff1a
git bisect skip aba65c3e4c0df07e4909aeefb758cdb688242bf6
# skip: [aba65c3e4c0df07e4909aeefb758cdb688242bf6] source-hash-827524abfb4b577d08276fde40929a9adfb7ff1a
git bisect skip aba65c3e4c0df07e4909aeefb758cdb688242bf6
# bad: [c81a8a0dcfc1ed095a80e4485c89dd0fcaf73f31] source-hash-c69ed33628ec0b7abf6296539cf280d6c4265930
git bisect bad c81a8a0dcfc1ed095a80e4485c89dd0fcaf73f31
# bad: [c81a8a0dcfc1ed095a80e4485c89dd0fcaf73f31] source-hash-c69ed33628ec0b7abf6296539cf280d6c4265930
git bisect bad c81a8a0dcfc1ed095a80e4485c89dd0fcaf73f31
# good: [1d4980621741d3050a5fe61b247c157d769988f2] source-hash-89d01a7d8028ddb765e02c116d202a2435894217
git bisect good 1d4980621741d3050a5fe61b247c157d769988f2
# skip: [89110ca258fa7a15dfc546acfb39e76fc3eb2a44] source-hash-e450a2c506ac7cd4433b0f93fc750a89919bc03c
git bisect skip 89110ca258fa7a15dfc546acfb39e76fc3eb2a44
# good: [1cca92a409385d9288c28a54d5e3008e56728bc0] source-hash-7be7824bbbdeee6fa998b950e6046ab37fe690cb
git bisect good 1cca92a409385d9288c28a54d5e3008e56728bc0
# skip: [5fa28ce2931a35ae64ae08d3904cfb76d24459d8] source-hash-2304beaca33c63b94df99cb827716f00ce259f9a
git bisect skip 5fa28ce2931a35ae64ae08d3904cfb76d24459d8
# bad: [2a9ff869c5638dc5c3aa387d0fe55c3291c86288] source-hash-01b7e04172889cbc9e4ac404b105e18ddc062d6f
git bisect bad 2a9ff869c5638dc5c3aa387d0fe55c3291c86288
# good: [9771d0c212cfa71b07742ff3dc5c05df22d600eb] source-hash-a9a0933ec67eab0ec31c8fadb60fb8e8e3e90485
git bisect good 9771d0c212cfa71b07742ff3dc5c05df22d600eb
# skip: [edd0c98bc8eba396299d252906dea0898436e42a] source-hash-6489f97fc428446c53c17f885963776cdcc21490
git bisect skip edd0c98bc8eba396299d252906dea0898436e42a
# skip: [9fc19519e5bc25b68aff579d6f6dd57553e21cb4] source-hash-d63a69a087c9c7641e28e2002d7ad56076d08ca1
git bisect skip 9fc19519e5bc25b68aff579d6f6dd57553e21cb4
# skip: [8cb23b3181bfae3988e27d5621476e8fc74ab823] source-hash-132731f0704b5a9e996cb0d413c8e369efe8875f
git bisect skip 8cb23b3181bfae3988e27d5621476e8fc74ab823
# skip: [79ff8e93eb0ddcebca4f814fc6883da8e1485c9f] source-hash-0bca15197461f9e0c6f28ce301c2fed2ec4b38cb
git bisect skip 79ff8e93eb0ddcebca4f814fc6883da8e1485c9f
# skip: [6b6b50cddd82bdfd45433bb7f8b31663211e2e13] source-hash-c3ef735fd5d8866c8ce28b89744150e733087427
git bisect skip 6b6b50cddd82bdfd45433bb7f8b31663211e2e13
# bad: [91460ba3ce3a0efa5693f098c1072b058903a31c] source-hash-69f61526cd4268a330be1e835e9e52f9b1dbde50
git bisect bad 91460ba3ce3a0efa5693f098c1072b058903a31c
# skip: [ae627c725e93b01ef68cf242574f40eb9885e3c9] source-hash-2ee4a04d61de32003d1895ac157ae97db7dd36c8
git bisect skip ae627c725e93b01ef68cf242574f40eb9885e3c9
# only skipped commits left to test
# possible first bad commit: [91460ba3ce3a0efa5693f098c1072b058903a31c] source-hash-69f61526cd4268a330be1e835e9e52f9b1dbde50
# possible first bad commit: [79ff8e93eb0ddcebca4f814fc6883da8e1485c9f] source-hash-0bca15197461f9e0c6f28ce301c2fed2ec4b38cb
# possible first bad commit: [a043626b542eb8314218d7439534dce2fc325304] source-hash-9379a922c07df3cdb7d567cc88dfaaa39ead3681
# possible first bad commit: [ae627c725e93b01ef68cf242574f40eb9885e3c9] source-hash-2ee4a04d61de32003d1895ac157ae97db7dd36c8
Comment 4 Matthew Francis 2015-01-06 09:01:33 UTC
The behaviour seems to have changed as of the below commit.

Adding Cc: to vmiklos@collabora.co.uk. Could you possibly have a look at this one? Thanks


commit bbef85c157169efa958ea1014d91d467cb243e6f
Author: Miklos Vajna <vmiklos@collabora.co.uk>
Date:   Tue Oct 1 16:57:56 2013 +0200

    bnc#779620 DOCX import: try harder to convert floating tables to text frames
    
    Since 78d1f1c2835b9fae0f91ed771fc1d594c7817502, we convert floating
    tables to text frames only in case it's possible that there will be
    wrapping, to give better results for multi-page tables, which are
    multi-page, and technically floating ones, but that has no effect on the
    layout.
    
    The problem was that we try to do this decision too early, effectively
    the page width and margins were counted from the default letter size,
    instead of the actual values, which did not arrive at the time of the
    decision. Fix this by moving this logic at the section end.
    
    Change-Id: Ic1fbceb54c8ec223ed01836fafe6220bb3b2410a
Comment 5 Miklos Vajna 2015-05-29 21:05:36 UTC
Aha, floating table is in the header, what the above commit does only makes sense for in-body-text floating tables, will have a look.
Comment 6 Commit Notification 2015-06-01 07:14:50 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=81ef96a2417c7843dfed0558c920ad3064e58921

tdf#79639 DOCX import: don't delay text frame conversion of in-header tables

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Timur 2015-06-01 10:27:29 UTC
Created attachment 116217 [details]
test 32-page document.docx
Comment 8 Timur 2015-06-01 10:28:14 UTC
Created attachment 116218 [details]
test 32-page document in Word 2010
Comment 9 Timur 2015-06-01 10:28:51 UTC
Created attachment 116219 [details]
test 32-page document in LO 3.3
Comment 10 Timur 2015-06-01 10:29:46 UTC
Attachment 116217 [details] cannot be open in LO 5.0+ probably Bug 89100.
Comment 11 Commit Notification 2015-06-02 07:21:41 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3cf789a15450efcdcf8dd95eeb71bfc746591f1c&h=libreoffice-5-0

tdf#79639 DOCX import: don't delay text frame conversion of in-header tables

It will be available in 5.0.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Robinson Tryon (qubit) 2015-12-17 08:22:45 UTC Comment hidden (obsolete)